--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -1,7 +1,6 @@
 .cart {
     max-width: 100%;
     display: grid;
-    border-collapse: collapse;
     margin: .5rem;
 }
 
@@ -34,7 +33,6 @@
     font-size: 1.3rem;
 }
 
-
 .cart tbody tr:nth-child(even) {
     background-color: rgb(188, 217, 243);
 }
@@ -66,4 +64,20 @@
 .ImgContainer {
     display: flex;
     justify-content: center;
+}
+
+.emptyCartContainer {
+    display: grid;
+    place-items: center;
+    min-height: 70vh;
+    width: 100%;
+}
+
+.emptyCart {
+    display: block;
+    height: 10rem;
+    margin: auto;
+}
+.buyButton{
+    font-size: 1.2rem;
 }
