cuando el producto no tenga stock no se puede ingresar a el y te dice que no hay items disponibles y le cambie el color del boton de agregar carrito

--- a/src/Components/ItemDetail/ItemDetail.css
+++ b/src/Components/ItemDetail/ItemDetail.css
@@ -19,3 +19,10 @@
 .contenedorProducto div h1 {
     text-align: center;
 }
+.addCartButton{
+    margin-top: 1rem;
+    color: #e0f4f3;
+}
+.addCartButton:hover{
+    color: #687b95;
+}
