--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -9,17 +9,24 @@
     background-color: #1cf;
     width: 100%;
 }
+.cart tfoot{
+    display: flex;
+    justify-content: end;
+    gap: 2rem;
+}
 
 .cart thead tr,
 .cart tbody tr,
 .cart tfoot tr {
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
     padding: 2rem;
     text-align: center;
 }
-
+.cart tfoot tr{
+    gap: 2rem;
+    padding: 2rem .5rem;
+}
 .cart tbody tr td,
 .cart thead tr th {
     flex-basis: 20%;
@@ -80,4 +87,11 @@
 }
 .buyButton{
     font-size: 1.2rem;
+}
+.removeItemImg, .removeCartImg{
+    height: 5rem;
+}
+.removeItemButton, .removeCartButton{
+    background: transparent;
+    border: transparent;
 }
